<resources>
    <string name="app_name">altlokalt_s_application</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id"/>
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token"/>
    <string name="lbl_continue">Continue</string>
    <string name="msg_list_ingridient">List Ingridients</string>
    <string name="lbl_asian_fav_food">Asian Fav Food</string>
    <string name="msg_lets_get_starte">Lets Get Started!</string>
    <string name="lbl_5920">5920</string>
    <string name="msg_1_8_ounce_pac">1 (8 ounce) package spaghetti </string>
    <string name="msg_search_my_recip">Search my recipe</string>
    <string name="msg_the_recipe_so_g">The Recipe so g|</string>
    <string name="msg_subrotho_1">Subrotho  | (+1) 2399 201 22 4568  Green Gate Lane, Albama 36590</string>
    <string name="lbl_about">About</string>
    <string name="msg_angelinee_gmail">Angelinee@gmail.com</string>
    <string name="msg_visa_xxxx_xxx">Visa   XXXX-XXXX-2043</string>
    <string name="lbl_directions">Directions</string>
    <string name="lbl_delete_user">Delete User</string>
    <string name="lbl_japanese">Japanese</string>
    <string name="msg_how_to_make_ita">How to make italian spaghetti carbonara easy in your home</string>
    <string name="lbl_total_likes">Total likes</string>
    <string name="lbl_12g">12g</string>
    <string name="msg_enter_your_reci">Enter your recipe title</string>
    <string name="lbl_user_agreement">User Agreement</string>
    <string name="msg_1_teaspoon_drie">1 teaspoon dried basil </string>
    <string name="lbl_abigail">Abigail</string>
    <string name="lbl_mexican">Mexican</string>
    <string name="msg_chicken_teriyak">Chicken teriyaki</string>
    <string name="lbl_58">58</string>
    <string name="lbl_low_calories">Low Calories</string>
    <string name="lbl_find_recipe">Find Recipe</string>
    <string name="lbl_cook_1_hour">Cook 1 hour</string>
    <string name="lbl_2_chicken">2. Chicken</string>
    <string name="msg_by_signing_up2">By signing up, you are agreeing to our </string>
    <string name="lbl_recently_added">Recently Added</string>
    <string name="lbl_avatar_profile">Avatar Profile</string>
    <string name="lbl_email_support">Email Support</string>
    <string name="lbl_23g">23g</string>
    <string name="lbl_step_2">Step 2</string>
    <string name="lbl_step_1">Step 1</string>
    <string name="lbl_2_bay_leaves">2 bay leaves </string>
    <string name="lbl_chicken">Chicken</string>
    <string name="msg_1_pack_spaghett">1 Pack Spaghetti</string>
    <string name="lbl_bottombarbutton">bottombarbutton</string>
    <string name="lbl_thai">Thai</string>
    <string name="lbl_easy_cooking">Easy Cooking</string>
    <string name="msg_ingridients_for">Ingridients for 3 Servings</string>
    <string name="lbl_african">African</string>
    <string name="lbl_french">French</string>
    <string name="lbl_pick_up">Pick Up</string>
    <string name="msg_sign_in_with_fa">Sign in with Facebook</string>
    <string name="lbl_protein">Protein</string>
    <string name="lbl_followers">Followers</string>
    <string name="lbl_32">3</string>
    <string name="lbl_japan">Japan</string>
    <string name="lbl_angelinee">Angelinee</string>
    <string name="lbl_fix">FIX</string>
    <string name="lbl_meal">Meal</string>
    <string name="lbl_publish">Publish</string>
    <string name="lbl_american">American</string>
    <string name="lbl_oil_free">Oil Free</string>
    <string name="msg_no_show_all_re">No, Show all recipes food</string>
    <string name="msg_write_the_story">Write the story of the recipe food</string>
    <string name="lbl_prep_20_mins">Prep 20 Mins</string>
    <string name="lbl_24">24</string>
    <string name="lbl_bottombutton4">bottombutton4</string>
    <string name="msg_bottombarbutton">bottombarbutton2</string>
    <string name="lbl_radiobuttontest">radiobuttontest</string>
    <string name="msg_order_successfu">Order Successfully</string>
    <string name="msg_delivery_addres">Delivery Address</string>
    <string name="msg_4_6_5_ounce_c">4 (6.5 ounce) cans tomato sauce</string>
    <string name="lbl_snacks">Snacks</string>
    <string name="lbl_share_recipe">Share recipe </string>
    <string name="lbl_check4">check4</string>
    <string name="lbl_check3">check3</string>
    <string name="lbl_setting">Setting</string>
    <string name="lbl_1_hr_30_min">1 hr 30 min</string>
    <string name="msg_1_2_kg_chicken">1/2 kg chicken fillet</string>
    <string name="lbl_check2">check2</string>
    <string name="lbl_check1">check1</string>
    <string name="msg_yoseph_gmail_co">Yoseph@gmail.com</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_skip">Skip</string>
    <string name="msg_1_teaspoon_ital">1 teaspoon Italian seasoning </string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_editabletext">editabletext</string>
    <string name="lbl_choose_from">choose from</string>
    <string name="lbl_autoplay_videos">Autoplay Videos</string>
    <string name="msg_italian_spaghet">Italian Spaghetti Carbonara</string>
    <string name="lbl_shoo_phar_dhie">Shoo Phar Dhie</string>
    <string name="lbl_1_milk">1. Milk</string>
    <string name="lbl_cooking_time">Cooking Time</string>
    <string name="msg_cooking_experim">Cooking experiments with ingredients in your home</string>
    <string name="msg_what_do_you_wan">What do you want to cook today?</string>
    <string name="lbl_asian">Asian</string>
    <string name="lbl_2_34">$2.34</string>
    <string name="msg_top_10_foods_mu">Top 10 Foods Must Try in Jakarta </string>
    <string name="msg_yes_hide_all_a">Yes, Hide all about meat recipes food</string>
    <string name="msg_by_signing_up">By signing up, you are agreeing to our User Agreement and Privacy Policy</string>
    <string name="msg_abigailll_gmail">Abigailll@gmail.com</string>
    <string name="msg_jesslynarry_gma">Jesslynarry@gmail.com</string>
    <string name="lbl_yoseph">Yoseph</string>
    <string name="lbl_high_protein">High Protein</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_explore_recipe">Explore Recipe</string>
    <string name="lbl_sides">Sides</string>
    <string name="lbl_promo_code">Promo Code</string>
    <string name="lbl_welcome_back">Welcome back!</string>
    <string name="lbl_settings">Settings</string>
    <string name="msg_sign_in_with_ap">Sign in with Apple</string>
    <string name="msg_hello_shoo_phar">Hello Shoo Phar Dhie</string>
    <string name="lbl_bay_leaves">Bay leaves</string>
    <string name="lbl_tomato_sauce">Tomato Sauce</string>
    <string name="msg_privacy_and_pol">Privacy and Policy</string>
    <string name="lbl_add_ingridients">Add Ingridients </string>
    <string name="lbl_order_summary">Order Summary</string>
    <string name="lbl_greek">Greek</string>
    <string name="lbl_427">427</string>
    <string name="lbl_german">German</string>
    <string name="lbl4">&#x1f33e;</string>
    <string name="lbl5">&#x1f32f;</string>
    <string name="lbl2">&#x1f34e;</string>
    <string name="lbl3">&#x1f33f;</string>
    <string name="lbl_cuisine">Cuisine</string>
    <string name="msg_manage_your_acc">Manage your Account</string>
    <string name="lbl_fried_chicken">Fried Chicken</string>
    <string name="msg_already_have_an">Already have an account? Sign In</string>
    <string name="lbl_appertizers">Appertizers</string>
    <string name="msg_lorem_ipsum_dol3">Lorem ipsum dolor sit amet, conse ctetur adipiscing elit ut aliquam, purus sit amet luctus venenatis...</string>
    <string name="lbl_help_center">Help Center</string>
    <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla...</string>
    <string name="lbl_lunch">Lunch</string>
    <string name="lbl_chicken_katsu">Chicken katsu</string>
    <string name="msg_pound_italian">? pound Italian sausage </string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_dinner">Dinner</string>
    <string name="msg_sign_in_with_ph">Sign in with Phone</string>
    <string name="lbl_jesslyn_narry">Jesslyn Narry</string>
    <string name="lbl_korean">Korean</string>
    <string name="lbl_british">British</string>
    <string name="msg_what_ingredient">What ingredients are there in your kitchen?</string>
    <string name="lbl_recipebook">RecipeBook</string>
    <string name="msg_26_29_8_none">$26.29
$8
None
$34.29</string>
    <string name="lbl_support">Support</string>
    <string name="msg_are_you_a_veget">Are you a vegetarian?</string>
    <string name="lbl_servings">Servings</string>
    <string name="lbl_no_salt">No salt</string>
    <string name="lbl_dessert">Dessert</string>
    <string name="lbl_sign_out">Sign Out</string>
    <string name="lbl_2_hours_ago">2 Hours Ago</string>
    <string name="msg_use_your_own_ph">Use your own photo</string>
    <string name="msg_josephh_gmail_c">Josephh@gmail.com</string>
    <string name="lbl_latin">Latin</string>
    <string name="lbl_healty_food">Healty Food</string>
    <string name="lbl_chicken_wings">Chicken wings</string>
    <string name="lbl_shopping_list">Shopping List</string>
    <string name="lbl_6_servings">(6 Servings)</string>
    <string name="msg_already_have_an2">Already have an account? </string>
    <string name="lbl_list">List</string>
    <string name="lbl_venice_italy">Venice, Italy</string>
    <string name="lbl_ingridients">Ingridients</string>
    <string name="msg_italian_spaghet2">Italian Spaghethi car...</string>
    <string name="lbl_card_detail">card detail</string>
    <string name="lbl_dairy_free">Dairy Free</string>
    <string name="lbl_26_29">$26.29</string>
    <string name="lbl6">&#x1f35c;</string>
    <string name="lbl_1048">1048</string>
    <string name="lbl7">&#x1f32d;</string>
    <string name="lbl_my_recipe">My Recipe</string>
    <string name="lbl_josephh">Josephh</string>
    <string name="lbl_my_profile">My Profile</string>
    <string name="lbl_18_items">18 items</string>
    <string name="lbl_breakfast">Breakfast</string>
    <string name="lbl_italian_sausage">Italian sausage </string>
    <string name="lbl_3_potato">3. Potato</string>
    <string name="lbl_ja">ja</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_italian">Italian</string>
    <string name="lbl_preffered_store">Preffered Store</string>
    <string name="msg_23_recipe_you_c">23 Recipe you can make:</string>
    <string name="lbl_italia">Italia</string>
    <string name="msg_thank_you_for_o">Thank you for ordering ingridient with us, the ordered items will be sent to your house 1x24 hours working days</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_guides">Guides</string>
    <string name="lbl_calories">Calories</string>
    <string name="msg_1_teaspoon_drie2">1 teaspoon dried oregano </string>
    <string name="lbl_see_all">See All</string>
    <string name="lbl_delivery">Delivery</string>
    <string name="lbl_cook_experiment">Cook Experiment</string>
    <string name="msg_sub_total_price">Sub total Price\u2028Delivery Fee\u2028Promo code\u2028Total price</string>
    <string name="msg_lorem_ipsum_dol">Lorem Ipsum Dolor Sit Amet</string>
    <string name="msg_enter_promo_cod">Enter Promo Code</string>
    <string name="lbl_212">212</string>
    <string name="lbl_4_servings">4 Servings</string>
    <string name="lbl_and"> and </string>
    <string name="lbl_vietnamese">Vietnamese</string>
    <string name="msg_add_a_photo_of">Add a photo of the recipe</string>
    <string name="lbl">&#x1f953;</string>
    <string name="msg_sign_in_to_find">Sign in to find recipe you want</string>
    <string name="lbl_nei">nei</string>
</resources>