<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="onboardingOneVM" type="com.altlokaltsapplication.app.modules.onboardingone.data.viewmodel.OnboardingOneVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearOnboardingOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearPopUp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_1">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtWelcomeback"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_35pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.0"
                android:lineSpacingExtra="@dimen/_13pxh"
                android:singleLine="true"
                android:text="@{onboardingOneVM.onboardingOneModel.txtWelcomeback}"
                style="@style/txtPoppinsbold24" tools:text="@string/lbl_welcome_back"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtSignintofind"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.0"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:singleLine="true"
                android:text="@{onboardingOneVM.onboardingOneModel.txtSignintofind}"
                style="@style/txtPoppinsregular16_3" tools:text="@string/msg_sign_in_to_find"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignInWithAppleOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.0"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/msg_sign_in_with_ap"
                android:textAllCaps="false"
                style="@style/btnRoundedOutline" tools:text="@string/msg_sign_in_with_ap"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignInWithFacebook"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.0"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/msg_sign_in_with_fa"
                android:textAllCaps="false"
                style="@style/btnRoundedOutline" tools:text="@string/msg_sign_in_with_fa"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignInWithPhoneOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.0"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/msg_sign_in_with_ph"
                android:textAllCaps="false"
                style="@style/btnRoundedOutline" tools:text="@string/msg_sign_in_with_ph"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtBysigningup"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.0"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:text="@{onboardingOneVM.onboardingOneModel.txtBysigningup}"
                style="@style/txtPoppinsregular16" tools:text="@string/msg_by_signing_up"/>
        </LinearLayout>
    </LinearLayout>
</layout>
